Improves accuracy of measurements. Tweaks SIMD-code.